--- a/src/app/shared/components/dynamic-input/dynamic-input.component.html
+++ b/src/app/shared/components/dynamic-input/dynamic-input.component.html
@@ -42,6 +42,9 @@
         </li>
       </perfect-scrollbar>
     </ul>
+    <ul class="select__list" [ngClass]="{'select__list--open': !filteredOptions.length && value && showNotFoundTip}" >
+      <li class="select__list-item hover-coin" style="cursor: default" >{{'No matching found' | translate}}</li>
+    </ul>
   </div>
 
   <!--<div class="wrap-input__icon" *ngIf="icon" [innerHTML]="icon"></div>-->
