--- a/src/app/funds/balance/balance.component.html
+++ b/src/app/funds/balance/balance.component.html
@@ -102,6 +102,7 @@
             [options]="cryptoCurrenciesForChoose && getCryptoDynamicIData"
             (onChange)="onChangeCurrPair($event)"
             (onSelect)="onSelectPair($event.id)"
+            [showNotFoundTip]="true"
           ></app-dynamic-input>
           <app-dynamic-input
             *ngSwitchCase="Tab.FIAT"
@@ -109,6 +110,7 @@
             [options]="fiatCurrenciesForChoose && getFiatDynamicIData"
             (onChange)="onChangeCurrPair($event)"
             (onSelect)="onSelectPair($event.id)"
+            [showNotFoundTip]="true"
           ></app-dynamic-input>
           <app-dynamic-input
             *ngSwitchCase="Tab.PR"
@@ -116,6 +118,7 @@
             [options]="(allCurrenciesForChoose$ | async) | dynamicIData: 'name': 'name'"
             (onChange)="onChangeCurrPair($event)"
             (onSelect)="onSelectPair($event.id)"
+            [showNotFoundTip]="true"
           ></app-dynamic-input>
         </ng-container>
 
