--- a/src/app/funds/balance/send-money/send-step-two/send-step-two.component.html
+++ b/src/app/funds/balance/send-money/send-step-two/send-step-two.component.html
@@ -3,6 +3,7 @@
   *ngIf="choosedName === CRYPTO_WITHDRAWAL"
 ></app-send-crypto>
 <app-send-fiat
+  [balanceData]="balanceData"
   *ngIf="choosedName === FIAT_WITHDRAWAL"
 ></app-send-fiat>
 <app-send-inner-transfer
