--- a/src/app/dashboard/components/markets/markets.component.html
+++ b/src/app/dashboard/components/markets/markets.component.html
@@ -133,7 +133,7 @@
         <perfect-scrollbar style="max-height: 353px;">
           <div style="margin-right: 24px;">
             <app-markets-item
-              *ngFor="let pair of (pairs | currencySort :'currencyVolume'); trackBy: trackByFn"
+              *ngFor="let pair of (pairs | currencySort :'volume'); trackBy: trackByFn"
               [pair]="pair"
               [isFiat]="isFiat"
               [isFavorite]="pair | isFavoritePipe: userFavorites"
