--- a/src/assets/scss/components/_service-style.scss
+++ b/src/assets/scss/components/_service-style.scss
@@ -38,6 +38,7 @@ padding-bottom: 46px;
     left: 0;
     right: 0;
     width: 100%;
+        z-index: 60;
 
   .widget__trading-btn{
     margin-top: 0;
