--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -663,7 +663,7 @@
       display: flex;
       flex-direction: column;
       min-height: 100%;
-      padding-top: 22px;
+      padding-top: 11px;
       // background-image: url('../../assets/img/header-mob-bg.svg');
       background-repeat: no-repeat;
       background-position: left bottom;
@@ -703,11 +703,15 @@
     align-items: center;
     background: #252543;
     justify-content: center;
+    &--auth{
+      margin-bottom: 0;
+      justify-content: flex-start;
+    }
 
     .slash{
       margin-right: 5px;
       margin-left: 5px;
-          }
+    }
     &__img {
       min-width: 36px;
       width: 36px;
@@ -716,6 +720,10 @@
       border: 1px solid #94C2FF;
       margin-right: 8px;
       position: relative;
+      &--auth{
+        background-color: #C4C4C4;
+        border: 1px solid #C4C4C4;
+      }
 
       .info__img-empty {
         font-size: 20px;
@@ -732,8 +740,11 @@
       font-size: 14px;
       line-height: 18px;
       color: #fff;
-      margin-bottom: 4px;
+      // margin-bottom: 4px;
       word-break: break-all;
+      &--auth{
+        color: #237BEF;
+      }
     }
 
     &__email {
@@ -742,13 +753,21 @@
       font-size: 14px;
       color: #237BEF;
       &.no-auth{
-      font-size: 16px;
-          font-weight: 600;
-    }
+        font-size: 16px;
+        font-weight: 600;
+      }
 
     }
   }
-
+.e-h-descritption{
+      padding: 0 17px 12px;
+      p{
+        font-weight: 400;
+        line-height: 1.27;
+        font-size: 10px;
+        color: #38446A;
+      }
+    }
   .menu-mob {
     display: -webkit-flex;
     display: -ms-flex;
@@ -756,7 +775,14 @@
     flex-direction: column;
 
     &__wrap-links {
-      margin-left: 42px;
+      // margin-left: 42px;
+      .menu-mob__link{
+        padding-left: 32px;
+        &:not(:last-child){
+           margin-bottom: 1px;
+        }
+       
+      }
     }
 
     &__link {
@@ -764,7 +790,7 @@
       display: -ms-flex;
       display: flex;
       position: relative;
-      height: 52px;
+      height: 49px;
       padding: 0 16px;
       color: #fff;
       font-size: 14px;
@@ -772,6 +798,7 @@
       align-items: center;
       position: relative;
       background: #252543;
+      margin-bottom: 4px;
 
       &:focus {
         outline: none;
@@ -790,6 +817,8 @@
       &--active {
         background: linear-gradient(to right, rgba(33, 65, 125, .5), rgba(25, 26, 57, .5));
         box-shadow: 0 1px 4px rgba(0, 0, 0, 0.25);
+        border-bottom: 1px solid #525F73;
+        margin-bottom: 0;
 
         &:before {
           display: none;
@@ -821,14 +850,17 @@
       }
 
       &--next-page {
-
+        background-color: transparent;
+    height: 30px;
+    margin-top: 10px;
       }
     }
 
     &__link-icon {
       margin-right: 16px;
-      margin-left: 10px;
+      // margin-left: 10px;
       width: 16px;
+      display: none;
     }
 
     &__link-line {
@@ -836,7 +868,7 @@
     }
 
     &__link-holdings-inf {
-      color: $light-blue;
+          color: #237BEF;
       margin-left: auto;
       white-space: nowrap;
     }
