--- a/src/app/dashboard/components/embedded-orders-mobile/embedded-open-orders-mobile/embedded-open-orders-mobile.component.html
+++ b/src/app/dashboard/components/embedded-orders-mobile/embedded-open-orders-mobile/embedded-open-orders-mobile.component.html
@@ -1,28 +1,6 @@
 <!--orders-mob start-->
 <div class="orders orders--mob">
-  <!--<div class="orders__header-mob">-->
-    <!--<div class=" orders__page-title">-->
-      <!--{{'Open orders' | translate}}-->
-    <!--</div>-->
-    <!--<div class="orders__amount">{{countOfEntries$ | async}}</div>-->
-    <!--<div class="orders__filter-btn" (click)="openFilterPopup()">-->
-      <!--<svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">-->
-        <!--<path d="M15.9317 0.44323C15.8028 0.147863 15.5799 0.000159206 15.2618 0H0.737807C0.420134 0 0.196893 0.147863 0.0682816 0.44323C-0.0602502 0.753723 -0.00735105 1.01904 0.227217 1.23867L5.82145 6.84086V12.3635C5.82145 12.5607 5.89335 12.731 6.03702 12.8751L8.9417 15.784C9.07798 15.9278 9.24813 16 9.45245 16C9.54315 16 9.63766 15.9809 9.73602 15.9431C10.0312 15.8142 10.1788 15.5908 10.1788 15.2726V6.8409L15.7728 1.2387C16.0075 1.01908 16.0602 0.753842 15.9317 0.44323Z" />-->
-      <!--</svg>-->
-      <!--{{'Filters' | translate}}-->
-    <!--</div>-->
-  <!--</div>-->
-  <!--<div-->
-    <!--#scrollContainer-->
-    <!--[ngStyle]="tableScrollStyles"-->
-    <!--infiniteScroll-->
-    <!--[infiniteScrollDistance]="2"-->
-    <!--[infiniteScrollThrottle]="50"-->
-    <!--[scrollWindow]="false"-->
-    <!--[horizontal]="false"-->
-    <!--(scrolled)="loadMoreOrders()"-->
-  <!--&gt;-->
-
+  <perfect-scrollbar style="max-height: 353px;">
     <table class="table table--mob">
       <thead class="table__head">
       <tr class="table__head-row">
@@ -97,7 +75,7 @@
           </td>
         </tr>
       </ng-container>
-      <tr class="table__row--mob" *ngIf="true">
+      <tr class="table__row--mob" *ngIf="!openOrders?.length">
         <td class="table__cell table__cell--tal" colspan="4">
           {{'No matching records found'| translate}}
         </td>
@@ -105,64 +83,6 @@
       <!-- t-row end-->
       </tbody>
     </table>
-
-  <!--</div>-->
-
-  <!--filter-popup start-->
-  <!--<div class="filters-popup" [ngClass]="{'show-filter-popup': showFilterPopup}">-->
-    <!--<div class="filters-popup__header">-->
-      <!--<div class=" filters-popup__title">-->
-        <!--{{'Order filters'| translate}}-->
-      <!--</div>-->
-      <!--<div class="filters-popup__close" (click)="closeFilterPopup()">-->
-        <!--<svg width="15" height="17" viewBox="0 0 15 17" fill="none" xmlns="http://www.w3.org/2000/svg">-->
-          <!--<path d="M1.73781 0.627721C1.36501 0.220243 0.732466 0.192129 0.324987 0.564928C-0.0824919 0.937728 -0.110605 1.57027 0.262194 1.97775L1.73781 0.627721ZM13.2622 16.187C13.635 16.5945 14.2675 16.6226 14.675 16.2498C15.0825 15.877 15.1106 15.2445 14.7378 14.837L13.2622 16.187ZM14.7378 1.97775C15.1106 1.57027 15.0825 0.937728 14.675 0.564928C14.2675 0.192129 13.635 0.220243 13.2622 0.627721L14.7378 1.97775ZM0.262219 14.837C-0.110581 15.2445 -0.0824672 15.877 0.325012 16.2498C0.732491 16.6226 1.36503 16.5945 1.73783 16.187L0.262219 14.837ZM0.262194 1.97775L6.7622 9.08241L8.23781 7.73239L1.73781 0.627721L0.262194 1.97775ZM6.7622 9.08241L13.2622 16.187L14.7378 14.837L8.23781 7.73239L6.7622 9.08241ZM13.2622 0.627721L6.7622 7.73239L8.23781 9.08241L14.7378 1.97775L13.2622 0.627721ZM6.7622 7.73239L0.262219 14.837L1.73783 16.187L8.23781 9.08241L6.7622 7.73239Z"/>-->
-        <!--</svg>-->
-      <!--</div>-->
-    <!--</div>-->
-    <!--<form action="#">-->
-      <!--<div>-->
-        <!--<app-dynamic-input-->
-          <!--[value]="currValue"-->
-          <!--[options]="(currencyPairs$ | async) | dynamicIData: 'name': 'id'"-->
-          <!--[setNullValue]="true"-->
-          <!--(onChange)="onChangeCurrPair($event)"-->
-          <!--(onSelect)="onSelectPair($event.id)"-->
-        <!--&gt;</app-dynamic-input>-->
-
-      <!--</div>-->
-      <!--<div class="row row&#45;&#45;jcsb">-->
-        <!--<div class="wrap-input filters-popup__datepicker">-->
-          <!--<label class="wrap-input__label" [ngClass]="{'select-input_label': modelDateFrom?.date}" >{{'From'| translate}}</label>-->
-          <!--<my-date-picker-->
-            <!--name="from"-->
-            <!--[options]="myDatePickerOptions"-->
-            <!--[(ngModel)]="modelDateFrom"-->
-            <!--(dateChanged)="dateFromChanged($event)"-->
-          <!--&gt;-->
-            <!--&lt;!&ndash;&gt;&ndash;&gt;-->
-          <!--</my-date-picker>-->
-          <!--<div class="wrap-input__line" style="position: absolute; bottom: 1px; width: 100%;"></div>-->
-        <!--</div>-->
-        <!--<div class="wrap-input filters-popup__datepicker">-->
-          <!--<label class="wrap-input__label" [ngClass]="{'select-input_label': modelDateTo?.date}" >{{'To'| translate}}</label>-->
-
-          <!--<my-date-picker-->
-            <!--class="input-el"-->
-            <!--name="to"-->
-            <!--[options]="myDatePickerOptions"-->
-            <!--[(ngModel)]="modelDateTo"-->
-            <!--(dateChanged)="dateToChanged($event)"-->
-          <!--&gt;-->
-            <!--&gt;-->
-          <!--</my-date-picker>-->
-
-          <!--<div class="wrap-input__line" style="position: absolute; bottom: 1px; width: 100%;"></div>-->
-        <!--</div>-->
-      <!--</div>-->
-      <!--<button (click)="closeFilterPopup()" class="btn filters-popup__btn">{{'See'| translate}} &lt;!&ndash;<span>{{countOfEntries$ | async}}</span>&ndash;&gt; {{'results'| translate}}</button>-->
-    <!--</form>-->
-  <!--</div>-->
-  <!--filter-popup end-->
+  </perfect-scrollbar>
 </div>
 <!--orders-mob end-->
