--- a/src/app/dashboard/components/embedded-orders-mobile/embedded-orders-mobile.component.html
+++ b/src/app/dashboard/components/embedded-orders-mobile/embedded-orders-mobile.component.html
@@ -14,6 +14,7 @@
 
   <app-embedded-open-orders-mobile
     *ngIf="mainTab === 'open'"
+    (refreshOpenOrders)="toOpenOrders()"
   [openOrders]="openOrders"
   ></app-embedded-open-orders-mobile>
 
