--- a/src/app/dashboard/components/markets/markets-item/markets-item.component.html
+++ b/src/app/dashboard/components/markets/markets-item/markets-item.component.html
@@ -43,7 +43,7 @@
       </span>
     </div>
     <div class="table__cell table__cell--p4 table__cell--tar" style="width: 25%;">
-      <span style="font-size: 10px; color:#A0A0A0">{{ +pair.volume | roundCurrency:splitPairName(pair)[1] | formatCurrency:'short':splitPairName(pair)[1]}}</span>
+      <span style="font-size: 10px; color:#A0A0A0">{{ +pair.currencyVolume | roundCurrency:splitPairName(pair)[1] | formatCurrency:'short':splitPairName(pair)[1]}}</span>
     </div>
   </div>
 
