add virtual scroll

--- a/src/app/dashboard/components/embedded-orders-mobile/embedded-open-orders-mobile/embedded-open-orders-mobile.component.html
+++ b/src/app/dashboard/components/embedded-orders-mobile/embedded-open-orders-mobile/embedded-open-orders-mobile.component.html
@@ -1,6 +1,5 @@
 <!--orders-mob start-->
-<div class="orders orders--mob">
-  <perfect-scrollbar style="max-height: 353px;">
+  <cdk-virtual-scroll-viewport  style="height: 500px;" itemSize="90" >
     <table class="table table--mob">
       <thead class="table__head">
       <tr class="table__head-row">
@@ -83,6 +82,5 @@
       <!-- t-row end-->
       </tbody>
     </table>
-  </perfect-scrollbar>
-</div>
+  </cdk-virtual-scroll-viewport>
 <!--orders-mob end-->
