--- a/src/app/funds/balance/send-money/send-step-two/send-fiat/send-fiat.component.scss
+++ b/src/app/funds/balance/send-money/send-step-two/send-fiat/send-fiat.component.scss
@@ -163,6 +163,9 @@
 }
 
 // TEMP STYLE
+.withdrawal__closed-error {
+  color: #EB5757;
+}
 .btn {
   &.btn--center {
     color: #ffffff !important;
