--- a/src/app/funds/balance/send-money/send-step-two/send-fiat/send-fiat.component.html
+++ b/src/app/funds/balance/send-money/send-step-two/send-fiat/send-fiat.component.html
@@ -23,8 +23,8 @@
         </ul>
       </div>
 
-      <div class="wrap-input send__wrap-input">
-      <div class="withdrawal__closed-error" *ngIf="fiatInfoByName && !fiatInfoByName.merchantCurrencyData.length ">
+      <div class="wrap-input send__wrap-input" *ngIf="fiatInfoByName && !fiatInfoByName.merchantCurrencyData.length ">
+      <div class="withdrawal__closed-error" >
         Sorry, withdrawal is closed for current moment!
       </div>
       </div>
