--- a/src/app/funds/balance/send-money/send-step-three/send-tfa/send-tfa.component.html
+++ b/src/app/funds/balance/send-money/send-step-three/send-tfa/send-tfa.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="!isSentPin">
+<div *ngIf="pincodeFrom === CODE_FROM_GOOGLE">
   <div class="title send__title">Two factor authentication</div>
   <!--if google 2fa enabled start-->
   <form [formGroup]="form">
@@ -18,7 +18,7 @@
 </div>
 <!--if google 2fa enabled end-->
 <!--pin code from email start-->
-<div *ngIf="isSentPin">
+<div *ngIf="pincodeFrom === CODE_FROM_EMAIL">
   <div class="subtitle send__subtitle">Put the pincode from your email</div>
   <form [formGroup]="form">
     <div class="subtitle send__subtitle">{{subtitleMessage}}</div>
@@ -37,6 +37,7 @@
 </div>
 <!--pin code from email end-->
 <button class="btn btn--center"
+        *ngIf="pincodeFrom"
         [ngClass]="{'btn--empty-blue': !form.valid}"
         [disabled]="form.invalid"
         (click)="onSubmit()">
