--- a/src/app/funds/balance/pending-request-table/pending-request-table.component.html
+++ b/src/app/funds/balance/pending-request-table/pending-request-table.component.html
@@ -22,8 +22,8 @@
   >
     <td class="table__cell">
       <div class="table__date-time">
-        <div>{{item.date | dateWrapper | amDateFormat: 'dd DD.MM.YYYY'}}</div>
-        <div>{{item.date | dateWrapper | amDateFormat: 'HH:mm:ss'}}</div>
+        <div>{{item.date | amDateFormat: 'dd DD.MM.YYYY'}}</div>
+        <div>{{item.date | amDateFormat: 'HH:mm:ss'}}</div>
       </div>
     </td>
     <td class="table__cell">
@@ -37,10 +37,10 @@
       <span>{{item.commission | roundCurrency:item.currency | formatCurrency}}</span>
     </td>
     <td class="table__cell table__cell--tar">
-      <span>{{item.system}}</span>
+      <span>{{item.system | showPendingSystem: item.currency}}</span>
     </td>
     <td class="table__cell table__cell--tar">
-      <span>{{pendingRequestsItem.statusMap[item.status]}}</span>
+      <span>{{item.status | showPendingStatus: item.operation}}</span>
     </td>
     <!-- <td class="table__cell">
       <button class="btn btn--center btn--small btn--hidden">I paid</button>
