--- a/src/app/funds/balance/send-money/send-step-two/send-fiat/send-fiat.component.html
+++ b/src/app/funds/balance/send-money/send-step-two/send-fiat/send-fiat.component.html
@@ -4,8 +4,8 @@
     <div class="send__inputs-wrap">
       <div class="select send__select send__select--custom">
         <div class="select__value select__value--active" (click)="currencyDropdownToggle()">
-          <img [src]="activeFiat.name | getIconUrl" class="select__list-item-icon">
-          {{ activeFiat.name}}
+          <img [src]="(activeFiat ? activeFiat.name : '') | getIconUrl" class="select__list-item-icon">
+          {{activeFiat ? activeFiat.name : ''}}
         </div>
         <div class="select__label">{{'Currency' | translate}}</div>
         <div class="select__line"></div>
@@ -51,8 +51,8 @@
         <div class="select__value select__value--active"
              (click)="togglePaymentSystemDropdown()"
         >
-          <img [src]="  selectedMerchant.name | getIconUrl" class="select__list-item-icon">
-          {{  selectedMerchant.name }}
+          <img [src]="(selectedMerchant ? selectedMerchant.name : '') | getIconUrl" class="select__list-item-icon">
+          {{selectedMerchant ? selectedMerchant.name : ''}}
         </div>
         <div class="select__label">{{'Payment system' | translate}}</div>
         <div class="select__line"></div>
@@ -76,8 +76,8 @@
                 *ngFor="let merchant of merchants"
                 (click)="selectMerchant(merchant)"
             >
-              <img [src]="merchant.name | getIconUrl" class="select__list-item-icon">
-              {{merchant.name}}
+              <img [src]="(merchant ? merchant.name : '') | getIconUrl" class="select__list-item-icon">
+              {{merchant ? merchant.name : ''}}
             </li>
 
           </ul>
