--- a/src/app/funds/transaction-history/transaction-history.component.html
+++ b/src/app/funds/transaction-history/transaction-history.component.html
@@ -287,18 +287,20 @@
           </td>
         </tr>
 
-        <tr class="table__row" *ngIf="!(transactionsItems$ | async).length && !(loading$ | async)">
+        <tr class="table__row" *ngIf="!(transactionsItems$ | async).length && !(loading$ | async) && !initialRequest">
           <td class="table__cell table__cell--tac" colspan="7">
             {{'No matching records found' | translate}}
           </td>
         </tr>
         <tr class="table__row" *ngIf="!(transactionsItems$ | async).length && !(loading$ | async) && initialRequest">
           <td class="table__cell table__cell--tac" colspan="7">
-            <button
-              (click)="loadLastTransactions()"
+            {{'No matching records found!' | translate}}
+            <a
+              href=""
+              (click)="loadLastTransactions($event)"
             >
               {{'Loading last' | translate}}{{' ' + countPerPage + ' '}}{{'transactions' | translate}}
-            </button>
+            </a>
           </td>
         </tr>
       </tbody>
