--- a/src/app/funds/balance/refill-money/refill-step-two/refill-fiat/refill-fiat.component.html
+++ b/src/app/funds/balance/refill-money/refill-step-two/refill-fiat/refill-fiat.component.html
@@ -72,6 +72,8 @@
 
         <app-price-input [placeholder]="'Amount'" (customInput)="amountInput($event)" name="amount"
                          formControlName="amount"></app-price-input>
+        <span class=" wrap-input__message--show" *ngIf="!form.valid">
+      {{'Minimum sum for deposit' | translate}} {{fiatDataByName.minRefillSum}} {{activeFiat ? activeFiat.name : ''}}</span>
         <!--Input error section starts-->
         <div class="input-hint-wrapper">
           <span class="wrap-input__message"
