--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -96,11 +96,11 @@
                 <span class="menu__link-text">EXRATES Community</span>
               </a>
             </li>
-            <li class="submenu__item">
+            <!-- <li class="submenu__item">
               <a class="submenu__link" href="#" target="blank">
                 <span class="menu__link-text">Telegramm</span>
               </a>
-            </li>
+            </li> -->
             <li class="submenu__item">
               <a class="submenu__link" href="https://twitter.com/Exrates_Me" target="blank">
                 <span class="menu__link-text">Twitter</span>
