change validation logic task-1368

--- a/src/app/funds/balance/send-money/send-step-three/transfer-instant/transfer-instant.component.html
+++ b/src/app/funds/balance/send-money/send-step-three/transfer-instant/transfer-instant.component.html
@@ -42,7 +42,7 @@
         </div>
       </div>
 
-      <div class="wrap-input send__wrap-input" [ngClass]="{'wrap-input--error': form.get('amount').invalid && form.get('amount').touched}">
+      <div class="wrap-input send__wrap-input" [ngClass]="{'wrap-input--error': form.get('amount').invalid && (form.get('amount').touched || isSubmited)}">
         <div class="avaliable">
           {{'Avaliable:' | translate}}
           <a (click)="balanceClick()" class="link">
@@ -58,10 +58,10 @@
         <div *ngIf="form.get('amount').errors != null">
           <div class="input-hint-wrapper">
         <span class=" wrap-input__message--show" *ngIf="form.controls['amount'].errors['isMinThenMinWithdraw']"
-              [ngClass]="{'wrap-input__message': form.controls['amount'].errors['isMinThenMinWithdraw'] && form.controls['amount'].touched}">
+              [ngClass]="{'wrap-input__message': form.controls['amount'].errors['isMinThenMinWithdraw'] && (form.controls['amount'].touched || isSubmited)}">
       {{'Minimum sum for withdrawal' | translate}} {{minWithdrawSum}} {{activeCrypto ? activeCrypto.name : ''}}</span>
           <span class="wrap-input__message wrap-input__message--show"
-                *ngIf="form.controls['amount'].errors['isMaxThenActiveBalance'] && form.controls['amount'].touched">
+                *ngIf="form.controls['amount'].errors['isMaxThenActiveBalance'] && (form.controls['amount'].touched || isSubmited)">
       {{'Max sum for withdrawal' | translate}} {{activeBalance}}</span>
         </div>
         </div>
@@ -69,7 +69,7 @@
 
 
       <div class="wrap-input  send__wrap-input"
-           [ngClass]="{'wrap-input--error': !form.controls['email'].valid && form.controls['email'].touched}">
+           [ngClass]="{'wrap-input--error': !form.controls['email'].valid && (form.controls['email'].touched || isSubmited)}">
         <input class="wrap-input__input" (blur)="emailBlur()" name="email" formControlName="email" required>
         <label class="wrap-input__label">{{'Email' | translate}}</label>
         <div class="wrap-input__line"></div>
@@ -77,9 +77,9 @@
         <div *ngIf="form.controls['email'].invalid && form.controls['email'].errors">
           <div class="input-hint-wrapper">
         <span class="wrap-input__message"
-              *ngIf="form.controls['email'].errors['pattern'] || form.controls['email'].errors['required'] && form.controls['email'].touched">{{'Enter valid email to transfer' | translate}}</span>
+              *ngIf="form.controls['email'].errors['pattern'] || form.controls['email'].errors['required'] && (form.controls['email'].touched || isSubmited)">{{'Enter valid email to transfer' | translate}}</span>
 
-          <span class="wrap-input__message" *ngIf="form.controls['email'].errors['checkEmailCrash'] && form.controls['email'].touched">
+          <span class="wrap-input__message" *ngIf="form.controls['email'].errors['checkEmailCrash'] && (form.controls['email'].touched  || isSubmited)">
                 {{'Service is temporary unavailable, please try again later' | translate}}
               </span>
           <span class="wrap-input__message" *ngIf="form.controls['email'].errors['USER_EMAIL_NOT_FOUND']">
@@ -109,7 +109,6 @@
   </div>
   <button class="btn btn--center"
           [ngClass]="{'btn--empty-blue': !form.valid}"
-          [disabled]="form.invalid"
   (click)="submitTransfer()"
   >{{'Transfer' | translate}}</button>
   <div class="send__line"></div>
