--- a/src/app/funds/balance/send-money/send-step-three/transfer-protected-code/transfer-protected-code.component.scss
+++ b/src/app/funds/balance/send-money/send-step-three/transfer-protected-code/transfer-protected-code.component.scss
@@ -178,6 +178,12 @@ perfect-scrollbar{
 }
 
 // TEMP STYLE
+.btn--empty-blue{
+  &:hover, &:focus{
+    background-color: transparent !important;
+  }
+}
+
 .btn {
   &.btn--center {
     color: #ffffff !important;
