--- a/src/app/funds/balance/send-money/send-step-three/transfer-instant/transfer-instant.component.scss
+++ b/src/app/funds/balance/send-money/send-step-three/transfer-instant/transfer-instant.component.scss
@@ -179,6 +179,11 @@ perfect-scrollbar{
 }
 
 // TEMP STYLE
+.btn--empty-blue{
+  &:hover, &:focus{
+    background-color: transparent !important;
+  }
+}
 .btn {
   &.btn--center {
     color: #ffffff !important;
