--- a/src/app/funds/balance/send-money/send-step-two/send-crypto/send-crypto.component.scss
+++ b/src/app/funds/balance/send-money/send-step-two/send-crypto/send-crypto.component.scss
@@ -170,6 +170,12 @@ perfect-scrollbar{
 }
 
 // TEMP STYLE
+.btn--empty-blue{
+  &:hover, &:focus{
+    background-color: transparent !important;
+  }
+}
+
 .btn {
   &.btn--center {
     color: #ffffff !important;
