--- a/src/app/funds/balance/send-money/send-step-two/send-fiat/send-fiat.component.html
+++ b/src/app/funds/balance/send-money/send-step-two/send-fiat/send-fiat.component.html
@@ -30,7 +30,7 @@
       </div>
 
       <div class="wrap-input send__wrap-input"
-           [ngClass]="{'wrap-input--error': form.get('amount').invalid && form.get('amount').touched}"
+           [ngClass]="{'wrap-input--error': form.get('amount').invalid && (form.get('amount').touched || isSubmited)}"
            *ngIf="fiatInfoByName && fiatInfoByName.merchantCurrencyData.length ">
         <div class="avaliable">{{'Avaliable:' | translate}}
           <a (click)="balanceClick()" class="link">{{activeBalance}} {{activeFiat ? activeFiat.name : ''}}</a>
@@ -43,10 +43,10 @@
         <!--Input error section starts-->
         <div *ngIf="form.get('amount').errors != null">
         <span class=" wrap-input__message--show" *ngIf="form.controls['amount'].errors['isMinThenMinWithdraw']"
-              [ngClass]="{'wrap-input__message': form.controls['amount'].errors['isMinThenMinWithdraw'] && form.controls['amount'].touched}">
+              [ngClass]="{'wrap-input__message': form.controls['amount'].errors['isMinThenMinWithdraw'] && (form.controls['amount'].touched || isSubmited)}">
       {{'Minimum sum for withdrawal' | translate}} {{minWithdrawSum}} {{activeFiat ? activeFiat.name : ''}}</span>
           <span class="wrap-input__message wrap-input__message--show"
-                *ngIf="form.controls['amount'].errors['isMaxThenActiveBalance'] && form.controls['amount'].touched">
+                *ngIf="form.controls['amount'].errors['isMaxThenActiveBalance'] && (form.controls['amount'].touched || isSubmited)">
       {{'Max sum for withdrawal' | translate}} {{activeBalance}}</span>
         </div>
         <!--Input error section ends-->
@@ -94,7 +94,7 @@
 
 
       <div class="wrap-input send__wrap-input"
-           [ngClass]="{'wrap-input--error': !form.controls['address'].valid && form.controls['address'].touched}"
+           [ngClass]="{'wrap-input--error': !form.controls['address'].valid && (form.controls['address'].touched || isSubmited)}"
            *ngIf="fiatInfoByName && fiatInfoByName.merchantCurrencyData.length ">
         <input class="wrap-input__input" name="address" formControlName="address" required>
         <label class="wrap-input__label">{{'Payment system' | translate}} <span>{{activeFiat ? activeFiat.name : ''}}</span>
@@ -102,7 +102,7 @@
         <div class="wrap-input__line"></div>
         <!--Input error section starts-->
         <span class="wrap-input__message wrap-input__message--show"
-              *ngIf="!form.controls['address'].valid && form.controls['address'].touched ">
+              *ngIf="!form.controls['address'].valid && (form.controls['address'].touched || isSubmited)">
       {{'Set merchant adress for withdrawal' | translate}}</span>
         <!--Input error section ends-->
       </div>
@@ -141,7 +141,6 @@
   </div>
   <button class="btn btn--center "
           [ngClass]="{'btn--empty-blue': !form.valid}"
-          [disabled]="form.invalid"
           (click)="onSubmitWithdrawal()">{{'Withdraw' | translate}}
     <span class="value">{{calculateData.resultAmount}}</span>
     <span> {{activeFiat ? activeFiat.name : ''}}</span>
