--- a/src/app/funds/balance/send-money/send-step-two/send-crypto/send-crypto.component.html
+++ b/src/app/funds/balance/send-money/send-step-two/send-crypto/send-crypto.component.html
@@ -69,7 +69,8 @@
 
     <div class="send__inputs-wrap">
       <div class="wrap-input  send__wrap-input"
-           [ngClass]="{'wrap-input--error': !form.controls['address'].valid && (form.controls['address'].touched || isSubmited)}">
+           [ngClass]="{'wrap-input--error': !form.controls['address'].valid &&
+            (form.controls['address'].touched || isSubmited)}">
         <input class="wrap-input__input" name="address" formControlName="address" required>
         <label class="wrap-input__label">{{'Address for withdraw money' | translate}}</label>
         <div class="wrap-input__line"></div>
@@ -81,14 +82,17 @@
       </div>
 
       <div class="wrap-input send__wrap-input" *ngIf="isMemo"
-           [ngClass]="{'wrap-input--error': !form.controls['memo'].valid && (form.controls['memo'].touched || isSubmited)}"
-      >
+           [ngClass]="{'wrap-input--error': !form.controls['memo'].valid &&
+            (form.controls['memo'].touched || isSubmited)}">
         <input class="wrap-input__input" name="memo" formControlName="memo">
         <label class="wrap-input__label">{{memoName | translate}}</label>
         <div class="wrap-input__line"></div>
         <!--Input error section starts-->
         <span class="wrap-input__message wrap-input__message--show"
-              *ngIf="!form.controls['memo'].valid && (form.controls['memo'].touched || isSubmited)">{{'Enter memo ID' | translate}}</span>
+              *ngIf="!form.controls['memo'].valid &&
+               (form.controls['memo'].touched || isSubmited)">
+          {{'Enter memo ID' | translate}}
+        </span>
         <!--Input error section ends-->
       </div>
     </div>
