--- a/src/app/funds/balance/send-money/send-step-two/send-fiat/send-fiat.component.html
+++ b/src/app/funds/balance/send-money/send-step-two/send-fiat/send-fiat.component.html
@@ -94,15 +94,19 @@
 
 
       <div class="wrap-input send__wrap-input"
-           [ngClass]="{'wrap-input--error': !form.controls['address'].valid && (form.controls['address'].touched || isSubmited)}"
+           [ngClass]="{'wrap-input--error': !form.controls['address'].valid &&
+            (form.controls['address'].touched || isSubmited)}"
            *ngIf="fiatInfoByName && fiatInfoByName.merchantCurrencyData.length ">
         <input class="wrap-input__input" name="address" formControlName="address" required>
-        <label class="wrap-input__label">{{'Payment system' | translate}} <span>{{activeFiat ? activeFiat.name : ''}}</span>
-          {{'address' | translate}}</label>
+        <label class="wrap-input__label">{{'Payment system' | translate}}
+          <span>{{activeFiat ? activeFiat.name : ''}}</span>
+          {{'address' | translate}}
+        </label>
         <div class="wrap-input__line"></div>
         <!--Input error section starts-->
         <span class="wrap-input__message wrap-input__message--show"
-              *ngIf="!form.controls['address'].valid && (form.controls['address'].touched || isSubmited)">
+              *ngIf="!form.controls['address'].valid &&
+               (form.controls['address'].touched || isSubmited)">
       {{'Set merchant adress for withdrawal' | translate}}</span>
         <!--Input error section ends-->
       </div>
