--- a/src/app/popups/recovery-pass/recovery-pass.component.html
+++ b/src/app/popups/recovery-pass/recovery-pass.component.html
@@ -24,6 +24,7 @@
         <!--Input error section starts-->
         <div *ngIf="emailForm.get('email').invalid && emailForm.get('email').errors">
           <div class="input-hint-wrapper">
+          <div class="input-hint-wrapper">
             <span class="wrap-input__message" *ngIf="emailForm.get('email').errors['required'] && emailForm.get('email').touched">
             {{'Email is required' | translate}}
           </span>
@@ -31,6 +32,7 @@
             {{'Please, enter valid email address' | translate}}
           </span>
           </div>
+        </div>
         </div>
         <!--Input error section ends-->
       </div>
